--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/apple-touch-icon.png",
+      "src": "/favicon.ico",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
@@ -38,7 +38,7 @@
       "url": "/index.html#history",
       "icons": [
         {
-          "src": "/favicon.png",
+          "src": "/favicon.ico",
           "sizes": "96x96"
         }
       ]
